...

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/HomePageHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bottomborder"
            android:gravity="center"
            android:text="Chinese Checkers"
            android:textSize="32sp" />

        <Button
            android:id="@+id/joinCasualLobbyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
