<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lobbyChatView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivateLobbyChatFrag">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/leaveLobbyChatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Return to lobby" />

        <EditText
            android:id="@+id/MessageLobbyChat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="message"
            android:textSize="20dp" />

        <Button
            android:id="@+id/SendMessageLobbyChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send" />

        <TextView
            android:id="@+id/MessageListLobbyChat"
            android:layout_width="match_parent"
            android:layout_height="514dp"
            android:scrollbars = "vertical"
            android:textSize="20dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>