<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rea"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrivateLobbyFrag">

    <LinearLayout
        android:id="@+id/privateLobbyFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/leavePrivateLobby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="leave" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/privateLobbyId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Lobby:"
                android:textSize="30sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/privateLobbyJoinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Join Code:"
            android:textSize="30sp" />

        <Button
            android:id="@+id/chatWebsocketButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Open Chat" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/privateLobbyPlayer1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Player1"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/privateLobbyPlayerStatus1"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="center|right"
                android:layout_weight="0"
                android:src="@android:drawable/btn_dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/privateLobbyPlayer2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Player2"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/privateLobbyPlayerStatus2"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:src="@android:drawable/btn_dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/privateLobbyPlayer3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Player3"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/privateLobbyPlayerStatus3"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:src="@android:drawable/btn_dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/privateLobbyPlayer4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Player4"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/privateLobbyPlayerStatus4"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:src="@android:drawable/btn_dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/privateLobbyPlayer5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Player5"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/privateLobbyPlayerStatus5"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:src="@android:drawable/btn_dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/privateLobbyPlayer6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Player6"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/privateLobbyPlayerStatus6"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:src="@android:drawable/btn_dialog" />
        </LinearLayout>

        <Button
            android:id="@+id/privateLobbyReadyUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Ready Up" />

    </LinearLayout>
</FrameLayout>